--- a/sass/service.scss
+++ b/sass/service.scss
@@ -1,4 +1,3 @@
-
 @import './main';
 @import './component/card-service';
 @import './mixins/responsive';
@@ -8,6 +7,7 @@ header {
     background-size: cover;
     height: 400px;
 }
+
 .image {
     background-color: $mainColor;
     height: 100%;
@@ -23,6 +23,7 @@ header {
 
     b {
         font-size: 70px;
+
         @include responsive(mobile) {
             font-size: 60px;
         }
@@ -31,8 +32,10 @@ header {
 
 .care {
     @include centered;
+
     .we-care {
         display: flex;
+
         @include responsive(Desktop) {
             flex-direction: column;
             width: 94%;
@@ -56,12 +59,14 @@ header {
                 }
             }
         }
+
         .we-care-right {
             flex: 4;
+
             p {
                 font-size: 15px;
                 margin-top: 10px;
-                color:$mainColor;
+                color: $mainColor;
             }
         }
     }
@@ -76,6 +81,13 @@ header {
         h1 {
             color: $mainColor;
         }
+
+        hr {
+            @include responsive (Tablet) {
+                display: none;
+            }
+        }
+
     }
 
 }
@@ -87,6 +99,7 @@ header {
     .feedback {
         img {
             height: 410px;
+
             @include responsive(Desktop) {
                 height: 390px;
             }
@@ -98,6 +111,7 @@ header {
             @include responsive(Tablet) {
                 height: 250px;
             }
+
             @include responsive(mobile) {
                 height: 315px;
                 display: none;
@@ -116,7 +130,7 @@ header {
     .feedback-right {
         margin-top: 20px;
 
-        
+
         h1 {
             @include responsive(Desktop) {
                 margin-top: 80px;
@@ -131,8 +145,9 @@ header {
             @include responsive(Tablet) {
                 font-size: 20px;
             }
-            @include responsive(mobile) {
-            }
+
+            @include responsive(mobile) {}
+
             margin-top: 90px;
         }
 
