--- a/css/health-check-up.css
+++ b/css/health-check-up.css
@@ -411,4 +411,160 @@ h1 {
   justify-content: center;
   align-items: flex-end;
   height: 20vh;
-}/*# sourceMappingURL=health-check-up.css.map */
+}
+.footer-distributed {
+  background: white;
+  margin-top: -5px;
+}
+@media screen and (max-width: 620px) {
+  .footer-distributed {
+    background: #e2dada;
+  }
+}
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+  display: inline-block;
+  margin-bottom: 50px;
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right {
+    margin-bottom: 10px;
+  }
+}
+.footer-distributed .footer-left {
+  width: 40%;
+  margin-top: 50px;
+}
+.footer-distributed .footer-left img {
+  width: 250px;
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-left {
+    display: none;
+  }
+}
+.footer-distributed .footer-center {
+  width: 35%;
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-center {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 620px) {
+  .footer-distributed .footer-center {
+    width: 90%;
+    margin-left: 70px;
+  }
+}
+.footer-distributed .footer-center i {
+  background-color: #33383b;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+@media screen and (max-width: 1024px) {
+  .footer-distributed .footer-center i {
+    width: 35px;
+  }
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-center i {
+    width: 30px;
+  }
+}
+.footer-distributed .footer-center i .fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+.footer-distributed .footer-center p {
+  display: inline-block;
+  font-weight: 400;
+  vertical-align: middle;
+  margin: 0;
+}
+.footer-distributed .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+.footer-distributed .footer-center p a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+.footer-distributed .footer-right {
+  width: 20%;
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-right {
+    width: 48%;
+  }
+}
+@media screen and (max-width: 620px) {
+  .footer-distributed .footer-right {
+    margin-left: 75px;
+  }
+}
+.footer-distributed .footer-right .footer-company-about {
+  line-height: 20px;
+  color: #92999f;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+.footer-distributed .footer-right .footer-company-about span {
+  display: block;
+  color: #000000;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 1200px) {
+  .footer-distributed .footer-right .footer-company-about span {
+    margin-bottom: 0px;
+  }
+}
+.footer-distributed .footer-right .footer-icons {
+  margin-top: 25px;
+}
+@media screen and (max-width: 1024px) {
+  .footer-distributed .footer-right .footer-icons {
+    margin: 0px;
+  }
+}
+.footer-distributed .footer-right .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+@media screen and (max-width: 1024px) {
+  .footer-distributed .footer-right .footer-icons a {
+    width: 25px;
+  }
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-right .footer-icons a {
+    width: 20px;
+  }
+}
+
+/*# sourceMappingURL=health-check-up.css.map */
