--- a/css/home.css
+++ b/css/home.css
@@ -119,80 +119,158 @@ nav .nav-right ul li a:hover {
   width: 300px;
 }
 
-footer {
-  background: skyblue;
-  margin-top: -5PX;
+.footer-distributed {
+  background: white;
+  margin-top: -5px;
 }
-footer .footer-container {
-  margin-left: 50px;
-  margin-right: 50px;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  gap: 50px;
-}
-@media screen and (max-width: ) {
-  footer .footer-container {
-    gap: 30px;
+@media screen and (max-width: 620px) {
+  .footer-distributed {
+    background: #e2dada;
   }
 }
-@media screen and (max-width: ) {
-  footer .footer-container {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-}
-footer .footer-container .footer-left {
-  width: 380px;
-  margin-top: 50px;
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+  display: inline-block;
   margin-bottom: 50px;
 }
-@media screen and (max-width: ) {
-  footer .footer-container .footer-left {
-    width: 300px;
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right {
+    margin-bottom: 10px;
   }
 }
-@media screen and (max-width: ) {
-  footer .footer-container .footer-left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    margin-bottom: 0px;
-  }
-}
-footer .footer-container .footer-left img {
-  width: 200px;
-  margin-bottom: 110px;
-}
-@media screen and (max-width: ) {
-  footer .footer-container .footer-left img {
-    margin-bottom: 0px;
-  }
-}
-footer .footer-container .footer-right {
+.footer-distributed .footer-left {
+  width: 40%;
   margin-top: 50px;
-  margin-bottom: 50px;
-  width: 380px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
-footer .footer-container .footer-right .contact-footer {
-  display: flex;
-  align-items: center;
+.footer-distributed .footer-left img {
+  width: 250px;
 }
-footer .footer-container .footer-right .contact-footer i {
-  color: gray;
-  font-size: 28px;
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-left {
+    display: none;
+  }
+}
+.footer-distributed .footer-center {
+  width: 35%;
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-center {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 620px) {
+  .footer-distributed .footer-center {
+    width: 90%;
+    margin-left: 70px;
+  }
+}
+.footer-distributed .footer-center i {
+  background-color: #33383b;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
   text-align: center;
   line-height: 42px;
   margin: 10px 15px;
+  vertical-align: middle;
 }
-@media screen and (max-width: ) {
-  footer .footer-container .footer-right {
-    margin-top: 0px;
+@media screen and (max-width: 1024px) {
+  .footer-distributed .footer-center i {
+    width: 35px;
+  }
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-center i {
+    width: 30px;
+  }
+}
+.footer-distributed .footer-center i .fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+.footer-distributed .footer-center p {
+  display: inline-block;
+  font-weight: 400;
+  vertical-align: middle;
+  margin: 0;
+}
+.footer-distributed .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+.footer-distributed .footer-center p a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+.footer-distributed .footer-right {
+  width: 20%;
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-right {
+    width: 48%;
+  }
+}
+@media screen and (max-width: 620px) {
+  .footer-distributed .footer-right {
+    margin-left: 75px;
+  }
+}
+.footer-distributed .footer-right .footer-company-about {
+  line-height: 20px;
+  color: #92999f;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+.footer-distributed .footer-right .footer-company-about span {
+  display: block;
+  color: #000000;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 1200px) {
+  .footer-distributed .footer-right .footer-company-about span {
+    margin-bottom: 0px;
+  }
+}
+.footer-distributed .footer-right .footer-icons {
+  margin-top: 25px;
+}
+@media screen and (max-width: 1024px) {
+  .footer-distributed .footer-right .footer-icons {
+    margin: 0px;
+  }
+}
+.footer-distributed .footer-right .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+@media screen and (max-width: 1024px) {
+  .footer-distributed .footer-right .footer-icons a {
+    width: 25px;
+  }
+}
+@media screen and (max-width: 730px) {
+  .footer-distributed .footer-right .footer-icons a {
+    width: 20px;
   }
 }
 
@@ -212,146 +290,184 @@ body {
   background-color: rgb(241, 248, 249);
 }
 
-.why-they-choose-us {
+.card-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-left: 50px;
-  margin-right: 50px;
-}
-.why-they-choose-us h1 {
+  justify-content: center;
+  gap: 20px;
   margin-top: 50px;
   margin-bottom: 50px;
-  color: gray;
+  margin-top: -60px;
+  width: 100%;
 }
-.why-they-choose-us .card-container {
-  display: flex;
-  gap: 40px;
-}
-@media screen and (max-width: ) {
-  .why-they-choose-us .card-container {
+@media screen and (max-width: 730px) {
+  .card-container {
     flex-wrap: wrap;
   }
 }
-.why-they-choose-us .card-container .card {
-  flex-direction: column;
+.card-container .card:nth-child(4) {
+  margin-right: 100px;
+}
+@media screen and (max-width: 730px) {
+  .card-container .card:nth-child(4) {
+    margin-right: 50px;
+  }
+}
+.card-container .card {
+  width: 370px;
+  height: 270px;
+  background: rgb(83, 194, 238);
+  border-radius: 15px;
+  border: 1px solid darkblue;
+}
+@media screen and (max-width: 730px) {
+  .card-container .card {
+    margin-right: 50px;
+  }
+}
+.card-container .card .card-header {
+  height: 120px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  width: 25%;
+}
+.card-container .card .card-header .card-header-style {
+  background: white;
+  width: 70px;
+  height: 60%;
+  border-radius: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
-@media screen and (max-width: ) {
-  .why-they-choose-us .card-container .card {
-    width: 45%;
-  }
+.card-container .card .card-header .card-header-style i {
+  font-size: 35px;
+  color: darkblue;
 }
-@media screen and (max-width: ) {
-  .why-they-choose-us .card-container .card {
-    width: 97%;
-  }
-  .why-they-choose-us .card-container .card p {
-    font-size: 25px;
-  }
-}
-.why-they-choose-us .card-container .card p {
-  margin-top: 20px;
+.card-container .card-footer h4 {
   text-align: center;
+  margin-top: 10px;
+  margin-bottom: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.card-container .card-footer p {
+  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-.our-doctor {
+.doctor {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  flex-direction: column;
+}
+.doctor h2 {
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+.doctor .container2 {
+  width: 100%;
+  display: flex;
   margin-left: 50px;
   margin-right: 50px;
 }
-.our-doctor h1 {
-  margin-top: 50px;
-  margin-bottom: 50px;
-  color: gray;
-}
-.our-doctor .container-buntton {
-  display: flex;
-  justify-content: end;
-  width: 100%;
-  margin-bottom: 50px;
-}
-.our-doctor .container-buntton button {
-  height: 40px;
-  width: 150px;
-  margin-right: 5px;
-  border-radius: 10px;
-  background: rgba(14, 59, 98, 0.867);
-  border: none;
-}
-@media screen and (max-width: ) {
-  .our-doctor .container-buntton {
-    flex-direction: row;
-  }
-}
-@media screen and (max-width: ) {
-  .our-doctor .container-buntton {
-    justify-content: end;
-  }
-}
-@media screen and (max-width: ) {
-  .our-doctor .container-buntton {
-    display: none;
-  }
-}
-.our-doctor .container {
-  display: flex;
-  width: 93%;
-  gap: 40px;
-}
-@media screen and (max-width: ) {
-  .our-doctor .container {
-    gap: 95px;
+@media screen and (max-width: 730px) {
+  .doctor .container2 {
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
   }
 }
-.our-doctor .container .card {
-  height: 270px;
-  width: 24%;
+.doctor .wrapper,
+.doctor .card2 {
+  height: 400px;
+  width: 270px;
+  margin: auto;
+  position: relative;
 }
-@media screen and (max-width: ) {
-  .our-doctor .container .card {
-    width: 33%;
-  }
+.doctor .wrapper {
+  perspective: 900px;
 }
-@media screen and (max-width: ) {
-  .our-doctor .container .card {
-    width: 90%;
-  }
+.doctor .wrapper .card2 {
+  text-align: center;
+  transition: all 1.2s cubic-bezier(0.7, -0.5, 0.3, 1.8);
+  transform-style: preserve-3d;
 }
-.our-doctor .container .card img {
-  height: 203px;
+.doctor .wrapper:hover .card2 {
+  transform: rotateY(180deg);
 }
-.our-doctor .container .card .card-header {
-  width: 100%;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.doctor .front1,
+.doctor .front2,
+.doctor .front3,
+.doctor .front4,
+.doctor .back {
+  width: 270px;
+  position: relative;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
 }
-.our-doctor .container .card .card-footer {
-  background: rgba(14, 59, 98, 0.867);
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.doctor .front1 {
+  cursor: pointer;
+  height: 80%;
+  background-image: url(/image/doctor-has-bg/doctor01.webp);
+  backface-visibility: hidden;
   border-radius: 10px;
-  gap: 10px;
+  background-size: cover;
+  background-position: center center;
 }
-@media screen and (max-width: ) {
-  .our-doctor .container .card .card-footer {
-    height: 75px;
-  }
+.doctor .front2 {
+  cursor: pointer;
+  height: 80%;
+  background-image: url(/image/doctor-has-bg/doctor02.jpg);
+  backface-visibility: hidden;
+  border-radius: 10px;
+  background-size: cover;
+  background-position: center center;
+}
+.doctor .front3 {
+  cursor: pointer;
+  height: 80%;
+  background-image: url(/image/doctor-has-bg/doctor3.jpg);
+  backface-visibility: hidden;
+  border-radius: 10px;
+  background-size: cover;
+  background-position: center center;
+}
+.doctor .front4 {
+  cursor: pointer;
+  height: 80%;
+  background-image: url(/image/doctor-has-bg/doctor.jpg);
+  backface-visibility: hidden;
+  border-radius: 10px;
+  background-size: cover;
+  background-position: center center;
+}
+.doctor .back {
+  transform: rotateY(180deg);
+  position: absolute;
+  border-radius: 10px;
+  height: 360px;
+  background: rgb(233, 233, 233);
+  border: 1px solid darkblue;
+}
+.doctor .content {
+  padding-top: 18%;
+}
+.doctor .content h2 {
+  font-size: 35px;
+  margin: 0;
+  font-weight: 300;
+}
+.doctor .contnet h4 {
+  margin: 0;
+}
+.doctor .contnet p {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.doctor .socials-media {
+  margin-top: 20%;
 }
 
 .feed-back {
@@ -392,11 +508,187 @@ body {
   margin-bottom: 20px;
 }
 
+.form-contect {
+  margin-top: -40px;
+  height: 550px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+@media screen and (max-width: 730px) {
+  .form-contect {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    height: 950px;
+  }
+}
+.form-contect .form-left {
+  width: 600px;
+  margin-left: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.form-contect .form-left h2 {
+  margin-bottom: 25px;
+}
+.form-contect .form-left p {
+  margin-left: 10px;
+}
+.form-contect .form-left .card-container-icon .card-icon {
+  background: rgb(220, 236, 241);
+  height: 100px;
+  width: 450px;
+  margin-top: 25px;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+}
+.form-contect .form-left .card-container-icon .card-icon .back-ground-icon {
+  background: rgb(255, 255, 255);
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.form-contect .form-left .card-container-icon .card-icon .back-ground-icon i {
+  font-size: 30px;
+}
+.form-contect .form-left button {
+  margin-top: 20px;
+  padding: 15px;
+  border-radius: 5px;
+  background: skyblue;
+  border: 1px solid darkblue;
+  margin-right: 340px;
+}
+.form-contect .form-contain {
+  width: 600px;
+  height: 440px;
+  border: 1px solid black;
+  background: rgb(230, 243, 247);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  margin-right: 80px;
+}
+@media screen and (max-width: 730px) {
+  .form-contect .form-contain {
+    margin-right: 0px;
+  }
+}
+@media screen and (max-width: 620px) {
+  .form-contect .form-contain {
+    width: 500px;
+  }
+}
+.form-contect .form-contain form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
+.form-contect .form-contain form .name,
+.form-contect .form-contain form .text,
+.form-contect .form-contain form .Choose-date {
+  width: 90%;
+  display: flex;
+  gap: 10px;
+  margin-right: 20px;
+}
+.form-contect .form-contain form input {
+  padding: 15px;
+  width: 50%;
+  margin-top: 15px;
+}
+.form-contect .form-contain form .choose-doctor .choosethem {
+  margin-top: 15px;
+  width: 255px;
+  height: 50px;
+}
+@media screen and (max-width: 620px) {
+  .form-contect .form-contain form .choose-doctor .choosethem {
+    width: 210px;
+  }
+}
+.form-contect .form-contain form .describe-problem textarea {
+  margin-top: 15px;
+  width: 520px;
+  height: 80px;
+  margin-right: 16px;
+}
+@media screen and (max-width: 620px) {
+  .form-contect .form-contain form .describe-problem textarea {
+    width: 430px;
+  }
+}
+.form-contect .form-contain form button {
+  padding: 15px;
+  margin: 15px;
+  border-radius: 5px;
+  border: 1px solid darkblue;
+  background: skyblue;
+}
+
 .location h1 {
   margin-top: 50px;
   margin-bottom: 60px;
   text-align: center;
   color: gray;
+}
+
+.service {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.service h2 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.service .service-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.service .service-container .service-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 370px;
+  height: 210px;
+  border-radius: 15px;
+  background-color: white;
+  border: 1px solid darkblue;
+}
+.service .service-container .service-card .service-card-imge {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 30px;
+}
+.service .service-container .service-card .service-card-footer {
+  flex: 1;
+  margin: 20px 20px 10px 20px;
+}
+.service .service-container .service-card .service-card-footer .material-icons {
+  color: rgb(27, 40, 80);
 }
 
 header {
