--- a/sass/content/_MakeAppointment.scss
+++ b/sass/content/_MakeAppointment.scss
@@ -2,99 +2,147 @@
 @import '../component/group-mxin';
 @import '../mixins/responsive';
 
-.contact {
+.form-contect {
+    
+    margin-top: -40px;
+    height: 550px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: -100px;
-
-    h2 {
-        align-self: center;
+    justify-content: space-between;
+    width: 100%;
+    @include responsive(Tablet){
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        height: 950px;
     }
-    .contactUs {
-        width: 70%;
+
+
+    .form-left {
+        width: 600px;
+        margin-left: 60px;
+        @include centered;
+        flex-direction: column;
+        
+
+        h2 {
+            margin-bottom: 25px;
+        }
+
+        p {
+            margin-left: 10px;
+        }
+
+        .card-container-icon {
+            .card-icon {
+                background: rgb(220, 236, 241);
+                height: 100px;
+                width: 450px;
+                margin-top: 25px;
+                display: flex;
+                align-items: center;
+                border-radius: 10px;
+
+                .back-ground-icon {
+                    background: rgb(255, 255, 255);
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 100%;
+                    @include centered;
+                    margin-left: 20px;
+                    margin-right: 20px;
+
+                    i {
+                        font-size: 30px;
+                    }
+                }
+            }
+        }
+
+        button {
+            margin-top: 20px;
+            padding: 15px;
+            border-radius: 5px;
+            background: skyblue;
+            border: 1px solid darkblue;
+            margin-right: 340px;
+        }
+    }
+
+    .form-contain {
+        width: 600px;
+        height: 440px;
+        border: 1px solid black;
+        background: rgb(230, 243, 247);
         display: flex;
-        background:$mainColor;
-        color: aliceblue;
-        box-shadow: 1px 5px 2px 0px gray;
-        @include responsive(Laptop){
-            width: 85%;
-        }
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        margin-right: 80px;
         @include responsive(Tablet){
+            margin-right: 0px;
+        }
+        @include responsive(mobile) {
+            width: 500px;
+        }
+
+        form {
+            width: 100%;
+            height: 100%;
+            display: flex;
             flex-direction: column;
-        }
-        .contactUs-left {
-            flex: 0.7;
-            @include column;
+            justify-content: center;
+            align-items: center;
             margin-left: 20px;
-            gap: 30px;
-            h2 {
-                margin-bottom: 20px;
-                @include responsive(Laptop){
-                    font-size: 22px;
-                    margin-top: 10px;
+
+            .name,
+            .text,
+            .Choose-date {
+                width: 90%;
+                display: flex;
+                gap: 10px;
+                margin-right: 20px;
+            }
+
+            input {
+                padding: 15px;
+                width: 50%;
+                margin-top: 15px;
+            }
+
+            .choose-doctor .choosethem {
+                margin-top: 15px;
+                width: 255px;
+                height: 50px;
+                @include responsive(mobile)
+                {
+                    width: 210px;
+                }
+                
+            }
+
+            .describe-problem textarea {
+                margin-top: 15px;
+                width: 520px;
+                height: 80px;
+                margin-right: 16px;
+                @include responsive(mobile) {
+                    width: 430px;
+            
                 }
             }
-        }
 
-        .contactUs-right {
-            flex: 1;
-            margin-top: 60px;
-            @include responsive(Laptop){
-                margin-top: 75px;
-            }
-            @include responsive(Tablet){
-                margin-top: 30px;
-            }
-            h3 {
-                margin-top: 10px;
-                margin-bottom: 20px;
+            button {
+                padding: 15px;
+                margin: 15px;
+                border-radius: 5px;
+                border: 1px solid darkblue;
+                background: skyblue;
             }
 
-            .formBox {
-                position: relative;
-                width: 100%;
-                @include column;
-                gap: 20px;
 
-                .row50 {
-                    display: flex;
-                    gap: 30px;
-                    @include responsive(Laptop){
-                        gap: 10px;
-                    }
-
-                    .inputBox {
-                        display: flex;
-                        flex-direction: column;
-                        width: 50%;
-                        border-bottom: 10px;
-
-                        input {
-                            padding: 10px;
-                            background-color: rgb(229, 233, 235);
-                            @include responsive(Laptop){
-                                padding: 6px;
-                            }
-                        }
-                    }
-                }
-
-                button {
-                    width: 30%;
-                    height: 30px;
-                    border-radius: 10px;
-                    border: none;
-                    background-color: rgb(158, 237, 237);
-                    a{
-                        text-decoration: none;
-                        color: white;
-                    }
-                }
-            }
         }
     }
-}
-textarea{
-    width: 99.5%;
+
+
+
 }
