--- a/css/service.css
+++ b/css/service.css
@@ -120,7 +120,7 @@ nav .nav-right ul li a:hover {
 }
 
 .footer-distributed {
-  background: white;
+  background: whitesmoke;
   margin-top: -5px;
 }
 @media screen and (max-width: 620px) {
