--- a/sass/home.scss
+++ b/sass/home.scss
@@ -7,15 +7,33 @@
 @import './content/ourcare';
 @import './mixins/responsive';
 
-header{
-    height: 480px;
+
+header {
     background-image: url(/image/img-of-content/banner3.jpg);
     background-size: cover;
-    @include responsive(md){
-        height: 230px;
-        
+    height: 400px;
+}
+
+.image {
+    background-color: $mainColor;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+
+    p {
+        font-size: 23px;
     }
-    
+
+    b {
+        font-size: 70px;
+
+        @include responsive(mobile) {
+            font-size: 60px;
+        }
+    }
 }
 
 
